pkg/kgateway/translator/gateway/testutils/outputs/traffic-policy/oauth2.yaml
Clusters:
- connectTimeout: 5s
  dnsLookupFamily: V4_PREFERRED
  loadAssignment:
    clusterName: backend_default_oauth-provider-1_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: provider-1.com
              portValue: 443
          healthCheckConfig:
            hostname: provider-1.com
          hostname: provider-1.com
  metadata: {}
  name: backend_default_oauth-provider-1_0
  type: STRICT_DNS
- connectTimeout: 5s
  dnsLookupFamily: V4_PREFERRED
  loadAssignment:
    clusterName: backend_default_oauth-provider-2_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: provider-2.com
              portValue: 443
          healthCheckConfig:
            hostname: provider-2.com
          hostname: provider-2.com
  metadata: {}
  name: backend_default_oauth-provider-2_0
  type: STRICT_DNS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_test_80
  type: EDS
- connectTimeout: 5s
  metadata: {}
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: envoy.filters.http.oauth2/default/oauth-gateway-1
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
            config:
              authorizationEndpoint: https://provider-1.com/auth
              credentials:
                clientId: client-id
                cookieNames:
                  bearerToken: AccessToken-e960420e0a979e7f
                  codeVerifier: OauthCodeVerifier-e960420e0a979e7f
                  idToken: IdToken-e960420e0a979e7f
                  oauthExpires: OauthExpires-e960420e0a979e7f
                  oauthHmac: OauthHMAC-e960420e0a979e7f
                  oauthNonce: OauthNonce-e960420e0a979e7f
                  refreshToken: RefreshToken-e960420e0a979e7f
                hmacSecret:
                  name: oauth2/hmac_secret/kgateway-system/oauth2-hmac-secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
                tokenSecret:
                  name: oauth2/client_secret/default/oauth-client-secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
              preserveAuthorizationHeader: true
              redirectPathMatcher:
                path:
                  exact: /oauth2/redirect
              redirectUri: '%REQ(x-forwarded-proto)%://%REQ(:authority)%/oauth2/redirect'
              signoutPath:
                path:
                  exact: /logout
              tokenEndpoint:
                cluster: backend_default_oauth-provider-1_0
                timeout: 15s
                uri: https://provider-1.com/token
        - disabled: true
          name: envoy.filters.http.oauth2/default/oauth-listener-1
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
            config:
              authScopes:
              - email
              authorizationEndpoint: https://provider-2.com/auth
              credentials:
                clientId: client-id
                cookieNames:
                  bearerToken: AccessToken-848c62dd0a574e97
                  codeVerifier: OauthCodeVerifier-848c62dd0a574e97
                  idToken: IdToken-848c62dd0a574e97
                  oauthExpires: OauthExpires-848c62dd0a574e97
                  oauthHmac: OauthHMAC-848c62dd0a574e97
                  oauthNonce: OauthNonce-848c62dd0a574e97
                  refreshToken: RefreshToken-848c62dd0a574e97
                hmacSecret:
                  name: oauth2/hmac_secret/kgateway-system/oauth2-hmac-secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
                tokenSecret:
                  name: oauth2/client_secret/default/oauth-client-secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
              endSessionEndpoint: https://provider-2.com/logout
              forwardBearerToken: true
              redirectPathMatcher:
                path:
                  exact: /callback
              redirectUri: https://test.com/callback
              signoutPath:
                path:
                  exact: /log-out
              tokenEndpoint:
                cluster: backend_default_oauth-provider-2_0
                timeout: 15s
                uri: https://provider-2.com/token
        - disabled: true
          name: envoy.filters.http.oauth2/default/oauth-route-1
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
            config:
              authScopes:
              - openid
              - email
              authorizationEndpoint: https://provider-2.com/auth
              cookieConfigs:
                bearerTokenCookieConfig:
                  sameSite: LAX
                codeVerifierCookieConfig:
                  sameSite: LAX
                idTokenCookieConfig:
                  sameSite: LAX
                oauthExpiresCookieConfig:
                  sameSite: LAX
                oauthHmacCookieConfig:
                  sameSite: LAX
                oauthNonceCookieConfig:
                  sameSite: LAX
                refreshTokenCookieConfig:
                  sameSite: LAX
              credentials:
                clientId: client-id
                cookieDomain: provider-2.com
                cookieNames:
                  bearerToken: access_token
                  codeVerifier: OauthCodeVerifier-6279ed9211fcc830
                  idToken: id_token
                  oauthExpires: OauthExpires-6279ed9211fcc830
                  oauthHmac: OauthHMAC-6279ed9211fcc830
                  oauthNonce: OauthNonce-6279ed9211fcc830
                  refreshToken: RefreshToken-6279ed9211fcc830
                hmacSecret:
                  name: oauth2/hmac_secret/kgateway-system/oauth2-hmac-secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
                tokenSecret:
                  name: oauth2/client_secret/default/oauth-client-secret
                  sdsConfig:
                    ads: {}
                    resourceApiVersion: V3
              denyRedirectMatcher:
              - name: x-foo
                stringMatch:
                  exact: bar
              - name: x-baz
                stringMatch:
                  safeRegex:
                    regex: ^baz-.*
              disableAccessTokenSetCookie: true
              disableIdTokenSetCookie: true
              disableRefreshTokenSetCookie: true
              forwardBearerToken: true
              redirectPathMatcher:
                path:
                  exact: /callback
              redirectUri: https://test.com/callback
              signoutPath:
                path:
                  exact: /log-out
              tokenEndpoint:
                cluster: backend_default_oauth-provider-2_0
                timeout: 15s
                uri: https://provider-2.com/token
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        oidc:
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-attachment-1
  name: listener~8080
Routes:
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        oidc:
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-attachment-1
  name: listener~8080
  typedPerFilterConfig:
    envoy.filters.http.oauth2/default/oauth-gateway-1:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
  virtualHosts:
  - domains:
    - test.com
    metadata:
      filterMetadata:
        merge.TrafficPolicy.gateway.kgateway.dev:
          oidc:
          - gateway.kgateway.dev/TrafficPolicy/default/listener-attachment-1
    name: listener~8080~test_com
    routes:
    - match:
        pathSeparatedPrefix: /route-0
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            oidc:
            - gateway.kgateway.dev/TrafficPolicy/default/route-attachment-1
      name: listener~8080~test_com-route-0-httproute-test-default-0-0-rule0-matcher-0
      route:
        cluster: kube_default_test_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        envoy.filters.http.oauth2/default/oauth-route-1:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /route-1
      name: listener~8080~test_com-route-1-httproute-test-default-1-0-rule1-matcher-0
      route:
        cluster: kube_default_test_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /route-2
      name: listener~8080~test_com-route-2-httproute-test-default-2-0-rule2-matcher-0
      route:
        cluster: kube_default_test_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    typedPerFilterConfig:
      envoy.filters.http.oauth2/default/oauth-listener-1:
        '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
        config: {}
Secrets:
- genericSecret:
    secret:
      inlineBytes: Y2xpZW50LXNlY3JldA==
  name: oauth2/client_secret/default/oauth-client-secret
- genericSecret:
    secret:
      inlineBytes: SE1BQyBzZWNyZXQ=
  name: oauth2/hmac_secret/kgateway-system/oauth2-hmac-secret
Statuses:
  gateways:
    default/test:
      attachedListenerSets: 0
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/test:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
  policies:
    TrafficPolicy/default/gateway-attachment-1:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/listener-attachment-1:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/route-attachment-1:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
